Har nu altid samme parameter ordrer i result